[gd_scene load_steps=2 format=3 uid="uid://cfcraljihyp71"]

[ext_resource type="Script" path="res://Main.gd" id="1_sw3uy"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_sw3uy")

[node name="Button" type="Button" parent="."]
offset_left = 1226.0
offset_top = 688.0
offset_right = 1279.0
offset_bottom = 719.0
text = "Serv"

[node name="Button2" type="Button" parent="."]
offset_left = 90.0
offset_top = 200.0
offset_right = 290.0
offset_bottom = 231.0
text = "Join game"

[node name="TextEdit" type="TextEdit" parent="."]
offset_left = 90.0
offset_top = 80.0
offset_right = 290.0
offset_bottom = 110.0
placeholder_text = "Nickname"

[node name="TextEdit2" type="TextEdit" parent="."]
offset_left = 90.0
offset_top = 140.0
offset_right = 290.0
offset_bottom = 170.0
text = "127.0.0.1"
placeholder_text = "Ip"

[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="button_down" from="Button2" to="." method="_on_button_2_button_down"]
